Fix select2 display in collapsed forms

--- a/autonomie/static/css/main.css
+++ b/autonomie/static/css/main.css
@@ -467,6 +467,10 @@ header .navbar .nav > li > a {
   height: auto !important;
   padding: 0; }
 
+.collapse .form-control.select2-container {
+  width: 100% !important;
+  min-width: 220px; }
+
 /* Affichage d'un loader */
 #loading-box {
   position: fixed;
